--- a/TextPreprocessing.ipynb
+++ b/TextPreprocessing.ipynb
@@ -614,14 +614,575 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "adf0af93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# removing stop words \n",
-    "\n"
+    "# removing stop words (a/an/the.....)\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bf956d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'after',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'ain',\n",
+       " 'all',\n",
+       " 'am',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'any',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'be',\n",
+       " 'because',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'between',\n",
+       " 'both',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'can',\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'd',\n",
+       " 'did',\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'doing',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'down',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'further',\n",
+       " 'had',\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'has',\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'have',\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'having',\n",
+       " 'he',\n",
+       " \"he'd\",\n",
+       " \"he'll\",\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " \"he's\",\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'i',\n",
+       " \"i'd\",\n",
+       " 'if',\n",
+       " \"i'll\",\n",
+       " \"i'm\",\n",
+       " 'in',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'it',\n",
+       " \"it'd\",\n",
+       " \"it'll\",\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " \"i've\",\n",
+       " 'just',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'ma',\n",
+       " 'me',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'o',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'only',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 're',\n",
+       " 's',\n",
+       " 'same',\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'she',\n",
+       " \"she'd\",\n",
+       " \"she'll\",\n",
+       " \"she's\",\n",
+       " 'should',\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " \"should've\",\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 't',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'there',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " \"they'd\",\n",
+       " \"they'll\",\n",
+       " \"they're\",\n",
+       " \"they've\",\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'through',\n",
+       " 'to',\n",
+       " 'too',\n",
+       " 'under',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 've',\n",
+       " 'very',\n",
+       " 'was',\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'we',\n",
+       " \"we'd\",\n",
+       " \"we'll\",\n",
+       " \"we're\",\n",
+       " 'were',\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " \"we've\",\n",
+       " 'what',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\",\n",
+       " 'y',\n",
+       " 'you',\n",
+       " \"you'd\",\n",
+       " \"you'll\",\n",
+       " 'your',\n",
+       " \"you're\",\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves',\n",
+       " \"you've\"]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a79f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(text):\n",
+    "    new_text=[]\n",
+    "\n",
+    "    for word in text.split():\n",
+    "        if word in stopwords.words('english'):\n",
+    "            new_text.append('')\n",
+    "        else:\n",
+    "            new_text.append(word)\n",
+    "    x = new_text[:] # shallow copy kr rahe hai \n",
+    "    new_text.clear()\n",
+    "    return\" \".join(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4ef7ebb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This    simple example  shows   function works'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_stopwords('This is a very simple example that shows how the function works')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "caf39acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# handling emojis -> remove the emojis or replace emojis with there meaning\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "def remove_emo(text):\n",
+    "    emoji_pattern = re.compile(\"[\"\n",
+    "                                \"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "        \"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "        \"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "        \"\\U0001F1E0-\\U0001F1FF\"  # flags\n",
+    "        \"\\U00002702-\\U000027B0\"  # other symbols\n",
+    "        \"\\U000024C2-\\U0001F251\"\n",
+    "        \"]+\",\n",
+    "        flags=re.UNICODE)\n",
+    "    return emoji_pattern.sub(r'',text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6b2396bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'loved the movie.it was '"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_emo(\"loved the movie.it was 😍😍\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "dbe12a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python is :red_heart:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import emoji\n",
+    "print(emoji.demojize('python is ❤️'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "51a7bf43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'going', 'to', 'delhi']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tokeniztion -> text into smaller parts \n",
+    "\n",
+    "# 1. split function\n",
+    "\n",
+    "sent1 = 'i am going to delhi'\n",
+    "sent1.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "284af206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'going', 'to', 'mumbai']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2.regular expression\n",
+    "import re\n",
+    "sent3 = 'i am going to mumbai!'\n",
+    "tokens = re.findall('[\\w]+',sent3)\n",
+    "tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e67febcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\anshs\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\anshs\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'going', 'to', 'visit', 'mumbai', '!']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. nltk library\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('punkt_tab')  # Ensure punkt is downloaded\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+    "\n",
+    "sent4 = 'i am going to visit mumbai!'\n",
+    "word_tokenize(sent4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e651d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4.spacy lib -> best \n",
+    "\n",
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "doc1 = nlp('Apple is looking at buying a startup in the United States for $1 billion.')\n",
+    "doc2 = nlp(\"Elon Musk launched the new Tesla model in California yesterday.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c0ca3930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "is\n",
+      "looking\n",
+      "at\n",
+      "buying\n",
+      "a\n",
+      "startup\n",
+      "in\n",
+      "the\n",
+      "United\n",
+      "States\n",
+      "for\n",
+      "$\n",
+      "1\n",
+      "billion\n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc1:\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3f9c9429",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elon\n",
+      "Musk\n",
+      "launched\n",
+      "the\n",
+      "new\n",
+      "Tesla\n",
+      "model\n",
+      "in\n",
+      "California\n",
+      "yesterday\n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc2:\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "42501582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word                Lemma               \n",
+      "he                  he                  \n",
+      "was                 wa                  \n",
+      "running             running             \n",
+      "and                 and                 \n",
+      "eating              eating              \n",
+      "at                  at                  \n",
+      "the                 the                 \n",
+      "same                same                \n",
+      "time                time                \n",
+      "HE                  HE                  \n",
+      "has                 ha                  \n",
+      "bad                 bad                 \n",
+      "habit               habit               \n",
+      "of                  of                  \n",
+      "swimming            swimming            \n",
+      "after               after               \n",
+      "playing             playing             \n",
+      "long                long                \n",
+      "hours               hour                \n",
+      "in                  in                  \n",
+      "the                 the                 \n",
+      "sun                 sun                 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# stemming -> \n",
+    "#lemmatization\n",
+    "\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "wordnet_lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "sentence='he was running and eating at the same time. HE has bad habit of swimming after playing long hours in the sun.'\n",
+    "punctuations='?:!,.;'\n",
+    "sentence_words = nltk.word_tokenize(sentence)\n",
+    "for word in sentence_words:\n",
+    "    if word in punctuations:\n",
+    "        sentence_words.remove(word)\n",
+    "\n",
+    "sentence_words\n",
+    "print(\"{0:20}{1:20}\".format(\"Word\",\"Lemma\"))\n",
+    "for word in sentence_words:\n",
+    "    print(\"{0:20}{1:20}\".format(word, wordnet_lemmatizer.lemmatize(word)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdc81450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
